# 864000x-faster-subset-sum-algorithm-n60

./: README.md  algorithm.cmd
benchmarks/: TEST_DATA.md  world_records.py
docs/: _config.yml  index.html  robots.txt
zpp_rust/: Cargo.toml
zpp_rust/.cargo/: config.toml
zpp_rust/src/: controller.rs  fast_hash.rs  fraction.rs  gdvs.rs  gpu.rs  hardware_profile.rs  knapsack.rs  lib.rs  main.rs  scheduler.rs  trivial.rs
zpp_rust/src/engines/: backward.rs  bcj.rs  bonnetain.rs  bridge.rs  density_split.rs  digit_filter.rs  distributed_solver.rs  dominance.rs  estimate.rs  gdep.rs  genetic.rs  gradient.rs  greedy.rs  group_decompose.rs  hard_u128.rs  hash_mitm.rs  hgj.rs  ksum.rs  lll_solver.rs  md_mitm.rs  micro_decompose.rs  mod.rs  quantum_grover.rs  randomized.rs  recursive_density.rs  schroeppel_shamir.rs  split_solver.rs  tiny_brute.rs  turbospec.rs  unified_solver.rs
